La page de présentation est terminé [Finish] Ajout de la page inscription individuel [A continué]

--- a/Tournois_Gamer_BlazorServer/Tournois_Gamer_BlazorServer.csproj
+++ b/Tournois_Gamer_BlazorServer/Tournois_Gamer_BlazorServer.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="MudBlazor" Version="6.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Inscription\Individuel\" />
+    <Folder Include="Data\Inscription\Equipe\" />
+  </ItemGroup>
+
 </Project>
