--- a/Tournois_Gamer_BlazorServer/Tournois_Gamer_BlazorServer.csproj
+++ b/Tournois_Gamer_BlazorServer/Tournois_Gamer_BlazorServer.csproj
@@ -7,12 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
     <PackageReference Include="MudBlazor" Version="6.6.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\Inscription\Individuel\" />
-    <Folder Include="Data\Inscription\Equipe\" />
   </ItemGroup>
 
 </Project>
