--- a/Tournois_Gamer_BlazorServer/Tournois_Gamer_BlazorServer.csproj
+++ b/Tournois_Gamer_BlazorServer/Tournois_Gamer_BlazorServer.csproj
@@ -8,7 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
-    <PackageReference Include="MudBlazor" Version="6.6.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
+    <PackageReference Include="MudBlazor" Version="6.7.0" />
   </ItemGroup>
 
 </Project>
