--- a/Tournois_Gamer_BlazorServer/Tournois_Gamer_BlazorServer.csproj
+++ b/Tournois_Gamer_BlazorServer/Tournois_Gamer_BlazorServer.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="MudBlazor" Version="6.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
