--- a/Tournois_Gamer_BlazorServerTest/Tournois_Gamer_BlazorServerTest.csproj
+++ b/Tournois_Gamer_BlazorServerTest/Tournois_Gamer_BlazorServerTest.csproj
@@ -15,7 +15,6 @@
     <PackageReference Include="bunit.web" Version="1.21.9" />
     <PackageReference Include="bunit.web.testcomponents" Version="1.21.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-    <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -29,6 +28,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Tournois_Gamer_BlazorServer\Tournois_Gamer_BlazorServer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="IntegrateTest\" />
   </ItemGroup>
 
 </Project>
