--- a/Tournois_Gamer_BlazorServer/Tournois_Gamer_BlazorServer.csproj
+++ b/Tournois_Gamer_BlazorServer/Tournois_Gamer_BlazorServer.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MudBlazor" Version="6.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Component\" />
+  </ItemGroup>
+
 </Project>
